<resources>
    <string name="app_name">ApiRickMortyFragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_aceptar">Aceptar</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="informative">Informativo</string>
    <string name="detail_diaolog">Detalle de diaologo</string>
    <string name="busqueda_por_nombre">Busqueda por nombre</string>
    <string name="object_no_cast_characters">Object no pudo castearse a Characters</string>
    <string name="error_internet">No tienes conexión a internet, busca una conección</string>
    <string name="estado">Estado:</string>
    <string name="especie">Especie:</string>
    <string name="tipo">Tipo:</string>
    <string name="sexo">Sexo:</string>
    <string name="locacion">Locación:</string>
    <string name="origen">Origen:</string>
    <string name="fecha">Fecha:</string>
    <string name="rick_and_morty">Rick And Morty</string>
    <string name="categorias">Categorias</string>
    <string name="juegos">Personajes</string>
</resources>