<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_16dp"
    android:background="@drawable/gradient_background"
    tools:context=".View.Home.Implementations.HomeFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rick_and_morty"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/_16dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@dimen/_30sp" />

    <Button
        android:id="@+id/btn_searchView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60dp"
        android:layout_marginTop="@dimen/_8dp"
        android:textColor="@color/white"
        android:background="@drawable/btn_search"/>

    <com.denzcoskun.imageslider.ImageSlider
        android:id="@+id/carousel"
        android:layout_height="@dimen/_150dp"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_8dp"
        app:iss_auto_cycle="true"
        app:iss_no_dots="true"
        app:iss_corner_radius="@integer/material_motion_duration_long_2"
        app:iss_period="2000"
        app:iss_text_align="CENTER"
        app:iss_placeholder="@mipmap/img_rick_morty"/>

    <TextView
        android:id="@+id/textViewCategorias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/categorias"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carousel" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCategorias"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80dp"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/_8dp"
        android:layout_marginTop="@dimen/_8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCategorias"/>

    <TextView
        android:id="@+id/textViewPersonajes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/juegos"
        android:layout_marginTop="@dimen/_8dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvCategorias" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPersonajes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPersonajes" />

</LinearLayout>